Add log statement